# SGMOOS

./: .gitignore  CMakeLists.txt  README.md
Control/: CMakeLists.txt
Control/LuaLibs/: behavior.lua  functional.lua  moos.lua  set.lua
Control/SeaGrantTaskLib/: CMakeLists.txt  CameraTask.cpp  CameraTask.h  ConstantHeadingTask.cpp  ConstantHeadingTask.h  EndMission.cpp  EndMission.h  FaceVerticalPipe.cpp  FaceVerticalPipe.h  FaceXYPoint.cpp  FaceXYPoint.h  FunctionGenerator.cpp  FunctionGenerator.h  GoForward.cpp  GoForward.h  GoToAltitude.cpp  GoToAltitude.h  GoToDepth.cpp  GoToDepth.h  GoToWayPoint.cpp  GoToWayPoint.h  HoldingPattern.cpp  HoldingPattern.h  MOOSBehaviour.cpp  MOOSBehaviour.h  MOOSMission.cpp  MOOSMission.h  MOOSTaskLib.h  MOOSTaskReader.cpp  MOOSTaskReader.h  MaintainAltitude.cpp  MaintainAltitude.h  MaintainDepth.cpp  MaintainDepth.h  MaintainHeading.cpp  MaintainHeading.h  MaintainPipeDistance.cpp  MaintainPipeDistance.h  MaintainPipeRelHeading.cpp  MaintainPipeRelHeading.h  (+26 more)
Control/iRemoteSG/: CMakeLists.txt  KeyAction.cpp  KeyAction.h  SGRemote.cpp  SGRemote.h  iRemoteMain.cpp
Control/pHelmSG/: CMakeLists.txt  KatrinaBoatActuation.cpp  KatrinaBoatActuation.h  MOOSActuationMap.cpp  MOOSActuationMap.h  OdysseyIVActuation.cpp  OdysseyIVActuation.h  ReefExplorerActuation.cpp  ReefExplorerActuation.h  SGHelm.cpp  SGHelm.h  SGHelmMain.cpp
Control/pLuaHelm/: CMakeLists.txt  HelmConfig.cpp  HelmConfig.h  KatrinaBoatActuation.cpp  KatrinaBoatActuation.h  LuaHelmApp.cpp  LuaHelmApp.h  LuaMission.cpp  LuaMission.h  MOOSActuationMap.cpp  MOOSActuationMap.h  MOOSLuaEnvironment.cpp  MOOSLuaEnvironment.h  OdysseyIVActuation.cpp  OdysseyIVActuation.h  ReefExplorerActuation.cpp  ReefExplorerActuation.h  StateMachine.h  pLuaHelmMain.cpp
GUI/: ActuationPanel.cpp  ActuationPanel.h  BatterySummaryPanel.cpp  BatterySummaryPanel.h  CMakeLists.txt  MOOSPanel.cpp  MOOSPanel.h  MOOSPokePanel.cpp  MOOSPokePanel.h  MissionSummaryPanel.cpp  MissionSummaryPanel.h  NavSummaryPanel.cpp  NavSummaryPanel.h  RemoteControlPanel.cpp  RemoteControlPanel.h  SGHelmPanel.cpp  SGHelmPanel.h  SummaryPanel.cpp  SummaryPanel.h  SupervisoryPanel.cpp  SupervisoryPanel.h  VarLogPanel.cpp  VarLogPanel.h  YSISummaryPanel.cpp  YSISummaryPanel.h  uOdysseyIVPanel.cpp  uRexPanel.cpp  wxMOOSApp.cpp  wxMOOSApp.h  wxMOOSLib.h
Instruments/: CMakeLists.txt
Instruments/Actuation/: ActuatorSet.cpp  ActuatorSet.h  CMakeLists.txt  MOOSCopleyDriver.cpp  MOOSCopleyDriver.h  MOOSJRKerrMotorDriver.cpp  MOOSJRKerrMotorDriver.h  MOOSMotor.cpp  MOOSMotor.h  MOOSMotorDriver.cpp  MOOSMotorDriver.h  MOOSParkerMotorDriver.cpp  MOOSParkerMotorDriver.h  OdysseyIVThrusters.cpp  OdysseyIVThrusters.h  ReefExplorerThrusters.cpp  ReefExplorerThrusters.h  SGActuation.cpp  SGActuation.h  SGActuationMain.cpp  iMotorMain.cpp
Instruments/MOOS_Branched/: CMakeLists.txt
Instruments/MOOS_Branched/iDVL_SG/: CMakeLists.txt  DVLInstrument.cpp  DVLInstrument.h  iDVLMain.cpp
Instruments/MOOS_Branched/iINS_SG/: CMakeLists.txt  INSDriver.cpp  INSDriver.h  INSInstrument.cpp  INSInstrument.h  MicroStrainDriver.cpp  MicroStrainDriver.h  XbowDriver.cpp  XbowDriver.h  iINSMain.cpp
Instruments/MOOS_Branched/iRange/: CMakeLists.txt  PSA916Driver.cpp  PSA916Driver.h  PSA916ForwardDriver.cpp  PSA916ForwardDriver.h  RangeInstrument.cpp  RangeInstrument.h  Tritech200Driver.cpp  Tritech200Driver.h  Tritech200ForwardDriver.cpp  Tritech200ForwardDriver.h  iRangeMain.cpp
Instruments/iBatterySG/: CMakeLists.txt  SeaGrantBattery.cpp  SeaGrantBattery.h  iBatterySGMain.cpp
Instruments/iCamera/: BaslerCameraDriver.cpp  BaslerCameraDriver.h  CLIBuster.h  CMakeLists.txt  CameraApp.cpp  CameraApp.h  CameraDriver.cpp  CameraDriver.h  CameraDriverDC1394.cpp  CameraDriverDC1394.h  CameraDriverDummy.cpp  CameraDriverDummy.h  CameraDriverEventsink.h  CameraDriverGphoto2.cpp  CameraDriverGphoto2.h  Makefile.htm  StdAfx.cpp  conversions.cpp  conversions.h  deleteme  iCamera.dsp  iCamera.plg  iCameraMain.cpp  stdafx.h
Instruments/iCamera/Include/: AtlZoom.h  BACC_GUID.h  BCAM_GUID.h  Bcam.h  BcamAdapter.h  BcamError.h  BcamException.h  BcamPropertyBag.h  BcamUtility.h  BvcColorConverter.h  BvcDib.h  BvcError.h  BvcException.h  ColorConversion.h  CreateCorrectionTable.h  Exception.h  Utilities.h  bacc.h  bcamversion.h  classcode.h  functions.h  md5.h
Instruments/iMultiSonde/: CMakeLists.txt  MOOSHydrolabDriver.cpp  MOOSHydrolabDriver.h  MOOSMultisonde.cpp  MOOSMultisonde.h  MOOSMultisondeDriver.cpp  MOOSMultisondeDriver.h  MOOSYSIDriver.cpp  MOOSYSIDriver.h  SeabirdCTDDriver.cpp  SeabirdCTDDriver.h  iMultisondeMain.cpp
Instruments/iRelay/: CMakeLists.txt  MOOSRelay.cpp  MOOSRelay.h  SampleConfig.moos  iRelayMain.cpp
Instruments/iVision/: CMakeLists.txt  HoughPipeFollow.cpp  HoughPipeFollow.h  HoughPipeFollow2.cpp  HoughPipeFollow2.h  LaserRangeFinder.cpp  LaserRangeFinder.h  MOOSVision.cpp  MOOSVision.h  OpticalFlow.cpp  OpticalFlow.h  PhaseCorrNav.cpp  PhaseCorrNav.h  PhaseCorrRotScale.cpp  PhaseCorrRotScale.h  RecordableVisionProcessor.cpp  RecordableVisionProcessor.h  iVision.moos  iVisionMain.cpp
Instruments/iVision/kht/: CMakeLists.txt  change_log.txt
MiscApps/: CMakeLists.txt
MiscApps/pImageEnhance/: CMakeLists.txt  ImageEnhance.cpp  ImageEnhance.h  pImageEnhanceMain.cpp
MiscApps/pLogMySQL/: CMakeLists.txt  CreateDB.sql  MOOSLogMySQL.cpp  MOOSLogMySQL.h  pLogMySQLMain.cpp
MiscApps/pPipeNav/: CMakeLists.txt  PipeNavApp.cpp  PipeNavApp.h  pPipeNavMain.cpp
MiscApps/pSystemHealth/: CMakeLists.txt  SystemHealthApp.cpp  SystemHealthApp.h  pSystemHealthMain.cpp
SGLib/: AverageFilter.cpp  AverageFilter.h  CMakeLists.txt  MOOSInstrumentDriver.cpp  MOOSInstrumentDriver.h  MOOSInstrumentFamily.cpp  MOOSInstrumentFamily.h  MedianFilter.cpp  MedianFilter.h  SeaGrantGlobalHelper.cpp  SeaGrantGlobalHelper.h  SensorDataFilter.cpp  SensorDataFilter.h
SwigBindings/: CMakeLists.txt  python_examples.py
SwigBindings/java/: CMakeLists.txt  TestMOOS.java  mooslib_java.i
SwigBindings/python/: mooslib_pythonPYTHON_wrap.h  pyApp_Example.py  pyMOOS.py
(+2 files in other folders)
